# seedr-sonarr

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  cookies.txt  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
scripts/: build-push.sh
seedr_sonarr/: __init__.py  cli.py  exceptions.py  logging_config.py  persistence.py  qnap_client.py  retry.py  seedr_client.py  server.py  state.py
tests/: __init__.py  conftest.py  test_cli.py  test_concurrency.py  test_input_validation.py  test_integration.py  test_logging.py  test_persistence.py  test_qnap_client.py  test_retry.py  test_security.py  test_seedr_client.py  test_server.py  test_state.py
