[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seedr-sonarr"
version = "2.0.0"
description = "qBittorrent API emulation for Seedr.cc - Full lifecycle management for Sonarr/Radarr with multi-instance support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "CHAOS.CORP" }
]
keywords = [
    "seedr",
    "sonarr",
    "radarr",
    "qbittorrent",
    "torrent",
    "download-client",
    "api",
    "proxy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "seedrcc>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
seedr-sonarr = "seedr_sonarr.cli:main"

[project.urls]
Homepage = "https://github.com/example/seedr-sonarr"
Documentation = "https://github.com/example/seedr-sonarr#readme"
Repository = "https://github.com/example/seedr-sonarr"
Issues = "https://github.com/example/seedr-sonarr/issues"

[tool.hatch.build.targets.wheel]
packages = ["seedr_sonarr"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
